# INE5418---Building-Blocks

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
app/: Agencia.cpp  Agencia.h  BankApplication.cpp  BankApplication.h  Conta.cpp  Conta.h
config/: contas.csv  nodes.csv
net/: Message.cpp  Message.h  NetworkNode.cpp  NetworkNode.h
util/: Message.cpp  Message.h  utils.cpp
